syntax = "proto3";
package nbn;

option csharp_namespace = "Nbn.Proto";

enum AccumulationFunction {
  ACCUM_SUM     = 0;
  ACCUM_PRODUCT = 1;
  ACCUM_MAX     = 2;
  ACCUM_NONE    = 3;
}

enum ActivationFunction {
  ACT_NONE      = 0;
  ACT_IDENTITY  = 1;
  ACT_STEP_UP   = 2;
  ACT_STEP_MID  = 3;
  ACT_STEP_DOWN = 4;
  ACT_ABS       = 5;
  ACT_CLAMP     = 6;
  ACT_RELU      = 7;
  ACT_NRELU     = 8;
  ACT_SIN       = 9;
  ACT_TAN       = 10;
  ACT_TANH      = 11;
  ACT_ELU       = 12;
  ACT_EXP       = 13;
  ACT_PRELU     = 14;
  ACT_LOG       = 15;
  ACT_MULT      = 16;
  ACT_ADD       = 17;
  ACT_SIG       = 18;
  ACT_SILU      = 19;
  ACT_PCLAMP    = 20;
  ACT_MODL      = 21;
  ACT_MODR      = 22;
  ACT_SOFTP     = 23;
  ACT_SELU      = 24;
  ACT_LIN       = 25;
  ACT_LOGB      = 26;
  ACT_POW       = 27;
  ACT_GAUSS     = 28;
  ACT_QUAD      = 29;

  // 30..63 reserved
}

enum ResetFunction {
  RESET_ZERO = 0;
  RESET_HOLD = 1;
  RESET_CLAMP_POTENTIAL = 2;
  RESET_CLAMP1 = 3;
  RESET_POTENTIAL_CLAMP_BUFFER = 4;
  RESET_NEG_POTENTIAL_CLAMP_BUFFER = 5;
  RESET_HUNDREDTHS_POTENTIAL_CLAMP_BUFFER = 6;
  RESET_TENTH_POTENTIAL_CLAMP_BUFFER = 7;
  RESET_HALF_POTENTIAL_CLAMP_BUFFER = 8;
  RESET_DOUBLE_POTENTIAL_CLAMP_BUFFER = 9;
  RESET_FIVEX_POTENTIAL_CLAMP_BUFFER = 10;
  RESET_NEG_HUNDREDTHS_POTENTIAL_CLAMP_BUFFER = 11;
  RESET_NEG_TENTH_POTENTIAL_CLAMP_BUFFER = 12;
  RESET_NEG_HALF_POTENTIAL_CLAMP_BUFFER = 13;
  RESET_NEG_DOUBLE_POTENTIAL_CLAMP_BUFFER = 14;
  RESET_NEG_FIVEX_POTENTIAL_CLAMP_BUFFER = 15;
  RESET_INVERSE_POTENTIAL_CLAMP_BUFFER = 16;

  RESET_POTENTIAL_CLAMP1 = 17;
  RESET_NEG_POTENTIAL_CLAMP1 = 18;
  RESET_HUNDREDTHS_POTENTIAL_CLAMP1 = 19;
  RESET_TENTH_POTENTIAL_CLAMP1 = 20;
  RESET_HALF_POTENTIAL_CLAMP1 = 21;
  RESET_DOUBLE_POTENTIAL_CLAMP1 = 22;
  RESET_FIVEX_POTENTIAL_CLAMP1 = 23;
  RESET_NEG_HUNDREDTHS_POTENTIAL_CLAMP1 = 24;
  RESET_NEG_TENTH_POTENTIAL_CLAMP1 = 25;
  RESET_NEG_HALF_POTENTIAL_CLAMP1 = 26;
  RESET_NEG_DOUBLE_POTENTIAL_CLAMP1 = 27;
  RESET_NEG_FIVEX_POTENTIAL_CLAMP1 = 28;
  RESET_INVERSE_POTENTIAL_CLAMP1 = 29;

  RESET_POTENTIAL = 30;
  RESET_NEG_POTENTIAL = 31;
  RESET_HUNDREDTHS_POTENTIAL = 32;
  RESET_TENTH_POTENTIAL = 33;
  RESET_HALF_POTENTIAL = 34;
  RESET_DOUBLE_POTENTIAL = 35;
  RESET_FIVEX_POTENTIAL = 36;
  RESET_NEG_HUNDREDTHS_POTENTIAL = 37;
  RESET_NEG_TENTH_POTENTIAL = 38;
  RESET_NEG_HALF_POTENTIAL = 39;
  RESET_NEG_DOUBLE_POTENTIAL = 40;
  RESET_NEG_FIVEX_POTENTIAL = 41;
  RESET_INVERSE_POTENTIAL = 42;

  RESET_HALF = 43;
  RESET_TENTH = 44;
  RESET_HUNDREDTH = 45;
  RESET_NEGATIVE = 46;
  RESET_NEG_HALF = 47;
  RESET_NEG_TENTH = 48;
  RESET_NEG_HUNDREDTH = 49;

  RESET_DOUBLE_CLAMP1 = 50;
  RESET_FIVEX_CLAMP1 = 51;
  RESET_NEG_DOUBLE_CLAMP1 = 52;
  RESET_NEG_FIVEX_CLAMP1 = 53;

  RESET_DOUBLE = 54;
  RESET_FIVEX = 55;
  RESET_NEG_DOUBLE = 56;
  RESET_NEG_FIVEX = 57;

  RESET_DIVIDE_AXON_CT = 58;
  RESET_INVERSE_CLAMP1 = 59;
  RESET_INVERSE = 60;

  // 61..63 reserved
}